# elemental2

./: .gitignore  .travis.yml  BUILD  BUILD.jscomp  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  bazel_build_test.sh  build_gwt_mvn_jars.sh  build_test.sh  elemental_utils.bzl  license.txt  release_elemental.sh
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
build_defs/: BUILD  repository.bzl  workspace.bzl
build_defs/internal_do_not_use/: BUILD  elemental_utils.bzl  jscomp.BUILD
java/elemental2/chrome/: BUILD  chrome.js.diff  integer_entities.txt  name_mappings.txt
java/elemental2/core/: BUILD  BuiltInClosureTypeCleaner.java  es3.js.diff  es6.js.diff  es6_collections.js.diff  integer_entities.txt  name_mappings.txt  pom-template.xml  pom.xml  required_j2cl_externs.js  wildcard_types.txt
java/elemental2/dom/: BUILD  EventListenerCleaner.java  dom_missing_api.js  fileapi.js.diff  html5.js.diff  integer_entities.txt  name_mappings.txt  pom-template.xml  pom.xml  w3c_abort.js.diff  w3c_css.js.diff  w3c_dom2.js.diff  w3c_event.js.diff  w3c_navigation_timing.js.diff  w3c_rtc.js.diff  w3c_serviceworker.js.diff  window.js.diff
java/elemental2/indexeddb/: BUILD  integer_entities.txt  pom-template.xml  pom.xml
java/elemental2/media/: BUILD  integer_entities.txt  pom-template.xml  pom.xml
java/elemental2/promise/: AllSettledResultElement.java  BUILD  IThenable.java  Promise.gwt.xml  Promise.java  pom-template.xml  pom.xml  promise.inherits  promise.js  promise.types
java/elemental2/svg/: BUILD  integer_entities.txt  pom-template.xml  pom.xml
java/elemental2/webassembly/: BUILD  integer_entities.txt  name_mappings.txt  pom.xml
java/elemental2/webcrypto/: BUILD  w3c_webcrypto.js.diff
java/elemental2/webgl/: BUILD  integer_entities.txt  pom-template.xml  pom.xml
java/elemental2/webstorage/: BUILD  integer_entities.txt  pom-template.xml  pom.xml
kokoro/: bazel_build.sh  common.cfg
maven/: common_dependencies.xml  deploy.sh  pom-core.xml  pom-dom.xml  pom-indexeddb.xml  pom-media.xml  pom-promise.xml  pom-svg.xml  pom-webassembly.xml  pom-webgl.xml  pom-webstorage.xml  publish_to_sonatype.sh  release_elemental.sh
samples/helloworld/java/com/google/elemental2/samples/helloworld/: BUILD  HelloWorld.java  app.js
samples/promise/java/com/google/elemental2/samples/promise/: BUILD  PromiseSample.java  app.js
samples/regexp/java/com/google/elemental2/samples/regexp/: BUILD  RegExpSample.java  app.js
